# anomaly-detection-monitor

./: FINAL_REVIEW.md  Makefile  PROJECT_PLAN.md  README.md  anomaly_data.json  detect.py  index.html  pyproject.toml  requirements.txt
configs/app/: config.yaml
docs/: architecture.md  data_dictionary.md  decision_log.md  methodology.md
reports/: research_notes.md  results.md
src/cli/: run.py
src/data/: fred_client.py
src/detectors/: __init__.py  cusum.py  iqr.py  zscore.py
src/pipeline/: runner.py
tests/: test_detectors.py  test_pipeline.py
