[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "anomaly-detection-monitor"
version = "1.0.0"
description = "Statistical monitoring of U.S. macroeconomic indicators using Z-score, IQR, and CUSUM anomaly detection on FRED data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.scripts]
detect-anomalies = "src.cli.run:main"
